--- a/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
@@ -54,6 +54,10 @@
                     </div>
                     <div class="col-9">
                         <Switch TValue="bool" @bind-Checked="@CreateUpdateElectronicInvoiceDto.IsEnable"  ></Switch>
+                        <AntDesign.Alert Type="@AntDesign.AlertType.Info"
+                        Message="Info"
+       Description="If this setting is turned off, please print the invoice for the customer"
+       ShowIcon="true" />
                     </div>
                     
                 </div>
@@ -113,6 +117,27 @@
             <ValidationError></ValidationError>
         </Feedback>
     </TextEdit>
+</Validation>
+                    </div>
+                    
+                </div>
+                 <div class=" col-12 row mb-3">
+                    <div class="col-3 text-lg-end pt-2">
+                        <label>@L["StatusOnInvoiceIssue"]</label>
+                    </div>
+                    <div class="col-9">
+                        <Validation>
+                        <Select TValue="DeliveryStatus"  class="form-control"  @bind-SelectedValue="@CreateUpdateElectronicInvoiceDto.StatusOnInvoiceIssue"  >
+                                   @foreach (var enumValue in Enum.GetValues(typeof(DeliveryStatus)))
+                                    {
+                                         <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                                    }
+          
+                                </Select>
+                                                    
+            <ValidationError></ValidationError>
+       
+    
 </Validation>
                     </div>
                     
