--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -214,19 +214,19 @@
                             <TextEdit Placeholder="@L["ItemStyleKey"]"  @bind-Text="@item.Name" />
                             @if (Attributes?.Count > 1)
                             {
-                                <Button Class="btn btn-danger" @onclick="()=>DeleteAttribute(item)"><i class="fa fa-trash"></i></Button>
+                                <Button Class="btn btn-danger" @onclick="@(async () => await DeleteAttribute(item))"><i class="fa fa-trash"></i></Button>
                             }
                         </div>
                         <div class="form-control border-radius-0 mb-2">
                             @foreach (var itemTag in item.ItemTags)
                             {
-                                <Badge class="item-tags" CloseClicked="@(() => OnAttributeFieldTagClose(item.Id, itemTag))">@itemTag</Badge>
+                                <Badge class="item-tags" CloseClicked="@(async () => await OnAttributeFieldTagClose(item.Id, itemTag))">@itemTag</Badge>
                             }
 
                             <div class="input-container">
                                 <input type="text" class="tag-input" placeholder="New Tag"
                                 @bind-value="item.InputTagValue"
-                                @onkeyup="(e)=>HandleAttributeTagInputConfirm(item.Id, item.InputTagValue, e)" />
+                                @onkeyup="@(async (e) => await HandleAttributeTagInputConfirm(item.Id, item.InputTagValue, e))" />
                                 <i class="tag-input-placeholder-icon fa fa-plus"></i>
                             </div>
                         </div>
@@ -252,6 +252,7 @@
                         <Table Responsive>
                             <TableHeader>
                                 <TableRow>
+                                    <TableHeaderCell Class="text-center" />
                                     <TableHeaderCell Class="text-center">@L["PropertyName"]</TableHeaderCell>
                                     <TableHeaderCell Class="text-center">
                                         @L["SKU"]
@@ -306,12 +307,18 @@
                                             @L["CopyToAll"]
                                         </Span>
                                     </TableHeaderCell>
+                                    <TableHeaderCell Class="text-center">
+                                        @L["Status"]
+                                    </TableHeaderCell>
                                 </TableRow>
                             </TableHeader>
                             <TableBody>
-                                @foreach (var item in ItemDetailsList)
+                                @foreach (CreateItemDetailsDto item in ItemDetailsList)
                                 {
                                     <TableRow Class="text-center align-items-center">
+                                        <TableRowCell>
+                                            <i class="fas fa-caret-@(item.IsExpanded ? "up" : "down")" @onclick="() => ToggleExpanded(item)" />
+                                        </TableRowCell>
                                         <TableRowCell>@item.ItemName</TableRowCell>
                                         <TableRowCell>
                                             <input class="form-control form-control-sm" style="min-width: 100px;" @bind-value="@item.Sku" />
@@ -337,7 +344,125 @@
                                         <TableRowCell>
                                             <NumericEdit class="form-control form-control-sm" @bind-Value="@item.LimitQuantity"></NumericEdit>
                                         </TableRowCell>
+                                        <TableRowCell>
+                                            <Switch @bind-Checked="@item.Status" />
+                                        </TableRowCell>
                                     </TableRow>
+
+                                    @if (item.IsExpanded)
+                                    {
+                                        <TableRow>
+                                            <TableRowCell />
+                                            <TableRowCell />
+                                            <TableRowCell Colspan="9">
+                                                <Div Class="col-12">
+                                                    <Div Class="col-12">
+                                                        <Blazored.TextEditor.BlazoredTextEditor @ref="@ItemDetailsQuillHtml[ItemDetailsList.IndexOf(item)]">
+                                                            <ToolbarContent>
+                                                                <select class="ql-header">
+                                                                    <option selected=""></option>
+                                                                    <option value="1"></option>
+                                                                    <option value="2"></option>
+                                                                    <option value="3"></option>
+                                                                    <option value="4"></option>
+                                                                    <option value="5"></option>
+                                                                </select>
+                                                                <span class="ql-formats">
+                                                                    <button class="ql-bold"></button>
+                                                                    <button class="ql-italic"></button>
+                                                                    <button class="ql-underline"></button>
+                                                                    <button class="ql-strike"></button>
+                                                                </span>
+                                                                <span class="ql-formats">
+                                                                    <select class="ql-color"></select>
+                                                                    <select class="ql-background"></select>
+                                                                </span>
+                                                                <span class="ql-formats">
+                                                                    <button class="ql-list" value="ordered"></button>
+                                                                    <button class="ql-list" value="bullet"></button>
+                                                                </span>
+                                                                <span class="ql-formats">
+                                                                    <button class="ql-link"></button>
+                                                                </span>
+                                                                <span class="ql-formats">
+                                                                    <button class="ql-image"></button>
+                                                                </span>
+                                                                <span class="ql-formats">
+                                                                    <button class="ql-video"></button>
+                                                                </span>
+                                                            </ToolbarContent>
+                                                        </Blazored.TextEditor.BlazoredTextEditor>
+                                                    </Div>
+                                                    <br />
+                                                    <Div Class="col-12">
+                                                        <Field>
+                                                            <FilePicker @ref="ItemDetailPickers[ItemDetailsList.IndexOf(item)]"
+                                                                        Changed="@(async (e) => await OnImageUploadAsync(e,
+                                                                                                                         item,
+                                                                                                                         ItemDetailPickers[ItemDetailsList.IndexOf(item)]))"
+                                                                        ShowMode="FilePickerShowMode.List"
+                                                                        Accept=".jpg, .png, .svg ,.jpeg,.webp">
+                                                                <FileTemplate>
+                                                                    <Div Flex="Flex.JustifyContent.Between">
+                                                                        <Div>
+                                                                            <Heading Size="HeadingSize.Is6">@context.File.Name</Heading>
+                                                                                <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
+                                                                            </Div>
+                                                                            <Div Class="ps-2">
+                                                                                <Div>
+                                                                                @if (context.File.Status is FileEntryStatus.Ready)
+                                                                                {
+                                                                                    <Icon TextColor="TextColor.Primary" Name="IconName.FileUpload" />
+                                                                                }
+                                                                                else if (context.File.Status is FileEntryStatus.Uploading)
+                                                                                {
+                                                                                    <Icon TextColor="TextColor.Warning" Name="IconName.Bolt" />
+                                                                                }
+                                                                                else if (context.File.Status is FileEntryStatus.Uploaded)
+                                                                                {
+                                                                                    <Icon TextColor="TextColor.Success" Name="IconName.CheckCircle" />
+                                                                                }
+                                                                                else if (context.File.Status is FileEntryStatus.Error)
+                                                                                {
+                                                                                    <Icon TextColor="TextColor.Danger" Name="IconName.TimesCircle" />
+                                                                                }
+                                                                            </Div>
+                                                                            <Div>
+                                                                                <Icon TextColor="TextColor.Danger"
+                                                                                      Name="IconName.Delete"
+                                                                                      Class="cursor-pointer"
+                                                                                      Clicked="context.RemoveFile" />
+                                                                            </Div>
+                                                                        </Div>
+                                                                    </Div>
+                                                                </FileTemplate>
+                                                                <ButtonsTemplate>
+                                                                    <Progress Value="@ItemDetailPickers[ItemDetailsList.IndexOf(item)].GetProgressPercentage()" />
+                                                                </ButtonsTemplate>
+                                                            </FilePicker>
+                                                        </Field>
+                                                        @if (!item.Image.IsNullOrEmpty())
+                                                        {
+                                                            <Div Class="row">
+                                                                <Div Class="col-2"></Div>
+                                                                <Div Class="col-12">
+                                                                    <Div Class="image-list-container">
+                                                                        <Div Class="image-container">
+                                                                            <Image Class="blur-image" Source="@item.Image" Text="Logo Image" Fluid />
+                                                                             <Button Class="delete-button"
+                                                                                     Clicked="@(async (e) => await DeleteImageAsync(e, item))">
+                                                                                 <i class="fa fa-trash" />
+                                                                             </Button>
+                                                                        </Div>
+                                                                    </Div>
+                                                                </Div>
+                                                            </Div>
+                                                        }
+                                                    </Div>
+                                                </Div>
+                                            </TableRowCell>
+                                        </TableRow>
+                                    }
                                 }
                             </TableBody>
                         </Table>
