--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -331,6 +331,7 @@
                         if (
                             item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) || 
                             item == Enum.GetName(DeliveryMethod.SevenToEleven1) || 
+                            item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen) ||
                             item == Enum.GetName(DeliveryMethod.BlackCat1) || 
                             item == Enum.GetName(DeliveryMethod.BlackCatFreeze) || 
                             item == Enum.GetName(DeliveryMethod.BlackCatFrozen))
