--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1232,29 +1232,12 @@
                                         @foreach(var selectedItem in module.Selected)
                                         {
                                             <div class="col-@(12 / module.Selected.Count)">
-                                                @if(module.GroupBuyModuleType == GroupBuyModuleType.IndexAnchor)
+                                                @if(module.GroupBuyModuleType is GroupBuyModuleType.IndexAnchor)
                                                 {
-                                                    <Autocomplete 
-                                                                TItem="ItemWithItemTypeDto"
-                                                                TValue="Guid?"
-                                                                Data="@ItemsList.Where(x => x.ItemType == ItemType.Item)"
-                                                                TextField="@(( item ) => item.Name)"
-                                                                ValueField="@(( item ) => item.Id)"
-                                                                Placeholder="Search..."
-                                                                Filter="AutocompleteFilter.StartsWith"
-                                                                CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
-                                                                HighlightSearch
-                                                                Immediate="true"
-                                                                SelectedValue="selectedItem.Id"
-                                                                @bind-SelectedText="@selectedItem.Name"
-                                                                SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)"
-                                                                FreeTyping>
-                                                            <NotFoundContent> @L["NotFound"] </NotFoundContent>
-                                                    </Autocomplete>
-                                                    @if(selectedItem.Id == Guid.Empty)
-                                                    {
-                                                        <h4 class="p-2 d-inline-block">@selectedItem.Name</h4>
-                                                    }
+                                                    <Div Class="col-12 mb-2">
+                                                        <InputText class="form-control" @bind-Value="selectedItem.Name"
+                                                                   @oninput="(e) => OnSelectedValueChanged(null, module, selectedItem)" />
+                                                    </Div>
                                                 }
                                                 else
                                                 {
