--- a/src/Kooco.Pikachu.Blazor/Pages/Identity/UsersManagement/CustomUserManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Identity/UsersManagement/CustomUserManagement.razor
@@ -1,4 +1,5 @@
 ﻿@attribute [Authorize(IdentityPermissions.Users.Default)]
+@using Kooco.Pikachu.Identity
 @using Kooco.Pikachu.Localization
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.Extensions.Localization
@@ -34,7 +35,7 @@
 @attribute [Dependency(ReplaceServices = true)]
 
 @inherits Volo.Abp.Identity.Blazor.Pages.Identity.UserManagement;
-
+@inject IMyIdentityUserAppService MyIdentityUserAppService
 <Card>
     <CardHeader>
         @* ************************* PAGE HEADER ************************* *@
@@ -43,13 +44,22 @@
                     Toolbar="@Toolbar" />
     </CardHeader>
     <CardBody class="row">
-
-        <Column ColumnSize="ColumnSize.Is8">
+        <Column ColumnSize="ColumnSize.Is4">
         </Column>
         <Column ColumnSize="ColumnSize.Is4" class="form-group row" style="text-align:right;">
-            <label for="inputPassword" class="col-sm-4 col-form-label pt-1">  @L["Search"] </label>
-            <div class="col-sm-8">
-                <TextEdit class="form-control-sm" id="inputPassword" Text="@GetListInput.Filter" TextChanged="@OnSearchTextChanged" />
+            <label for="inputPassword" class="col-sm-3 col-form-label pt-1">  @l["UserTypes"] </label>
+            <div class="col-sm-9">
+                <Select Class="form-select-sm" TValue="UserTypes?" SelectedValue="Filters.UserTypes" SelectedValueChanged="@OnUserTypesChanged">
+                    <SelectItem Value="UserTypes.All">@l["Enum:UserTypes." + (int)UserTypes.All]</SelectItem>
+                    <SelectItem Value="UserTypes.Frontend">@l["Enum:UserTypes." + (int)UserTypes.Frontend]</SelectItem>
+                    <SelectItem Value="UserTypes.Backend">@l["Enum:UserTypes." + (int)UserTypes.Backend]</SelectItem>
+                </Select>
+            </div>
+        </Column>
+        <Column ColumnSize="ColumnSize.Is4" class="form-group row" style="text-align:right;">
+            <label for="inputPassword" class="col-sm-2 col-form-label pt-1">  @L["Search"] </label>
+            <div class="col-sm-10">
+                <TextEdit class="form-control-sm" id="inputPassword" Text="@Filters.Filter" TextChanged="@OnSearchTextChanged" />
             </div>
         </Column>
 
@@ -300,79 +310,4 @@
     <PermissionManagementModal @ref="PermissionManagementModal" />
 }
 
-@code {
-    #region Inject
-    private List<TableColumn> CustomUserManagementTableColumns => base.TableColumns.Get<UserManagement>();
 
-    TextRole _passwordTextRole = TextRole.Password;
-    #endregion
-
-    #region Methods
-    public void ChangePassword(TextRole? textRole)
-    {
-        if (textRole is null)
-        {
-            ChangePassword(_passwordTextRole == TextRole.Password ? TextRole.Text : TextRole.Password);
-            ShowPassword = !ShowPassword;
-        }
-
-        else _passwordTextRole = textRole.Value;
-    }
-
-    protected override ValueTask SetTableColumnsAsync()
-    {
-        CustomUserManagementTableColumns
-            .AddRange(new TableColumn[]
-            {
-                    new TableColumn
-                    {
-                        Title = L["Actions"],
-                        Actions = EntityActions.Get<UserManagement>(),
-                    },
-                    new TableColumn
-                    {
-                        Title = l["DisplayName:UserName"],
-                        Data = nameof(IdentityUserDto.UserName),
-                        Sortable = true,
-                    },
-                    new TableColumn
-                    {
-                        Title = l["DisplayName:name"],
-                        Data = nameof(IdentityUserDto.Name),
-                        Sortable = true,
-                    },
-                    new TableColumn
-                    {
-                        Title = L["EmailAddress"],
-                        Data = nameof(IdentityUserDto.Email),
-                        Sortable = true,
-                    },
-                    new TableColumn
-                    {
-                        Title = L["PhoneNumber"],
-                        Data = nameof(IdentityUserDto.PhoneNumber),
-                        Sortable = true,
-                    }
-            });
-
-        CustomUserManagementTableColumns.AddRange(GetExtensionTableColumns(IdentityModuleExtensionConsts.ModuleName,
-            IdentityModuleExtensionConsts.EntityNames.User));
-
-        return ValueTask.CompletedTask;
-    }
-
-    protected override async Task CreateEntityAsync()
-    {
-        if (base.NewEntity.Name.IsNullOrEmpty()) await _UiMessageService.Error(l[PikachuResource.NameCannotBeEmpty]);
-
-        else await base.CreateEntityAsync();
-    }
-
-    protected async override Task UpdateEntityAsync()
-    {
-        if (base.EditingEntity.Name.IsNullOrEmpty()) await _UiMessageService.Error(l[PikachuResource.NameCannotBeEmpty]);
-
-        else await base.UpdateEntityAsync();
-    }
-    #endregion
-}
