Commit For Pk-355

--- a/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
@@ -50,7 +50,7 @@
                   <Validations @ref="@CreateValidationsRef" Model="@CreateUpdateElectronicInvoiceDto" ValidateOnLoad="false">
                     <div class=" col-12 row mb-3">
                     <div class="col-3 text-lg-end ">
-                        <FieldLabel>@L["Enable/Disable"]</FieldLabel>
+                        <FieldLabel>@L["Use ECPay electronic receipt"]</FieldLabel>
                     </div>
                     <div class="col-9">
                         <Switch TValue="bool" @bind-Checked="@CreateUpdateElectronicInvoiceDto.IsEnable"  ></Switch>
